# store-management-microservices

./: .gitignore  LICENSE  README.md  docker-compose.yml
api_gateway/: README.md  pyproject.toml
api_gateway/app/: dependencies.py  main.py
api_gateway/app/routers/: admin_gateway_router.py  catalog_gateway_router.py  inventory_gateway_router.py  order_gateway_router.py  user_gateway_router.py
api_gateway/app/schema/: catalog_schema.py  inventory_schema.py  order_schema.py  user_schema.py
catalog_service/: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
catalog_service/alembic/: env.py
catalog_service/alembic/versions/: 2b8b9a3ce117_add_image_url_to_products.py
catalog_service/app/: database.py  dependencies.py  main.py  models.py
catalog_service/app/routers/: catalog_routers.py
catalog_service/app/routers/admin/: category_routers.py  city_product_router.py  city_routers.py  product_routers.py
catalog_service/app/schema/: category.py  city.py  city_product.py  product.py
inventory_service/: README.md  main.py  pyproject.toml
inventory_service/app/: database.py  internal_dependencies.py  main.py  (+1 more)
order_service/: .env  .gitignore  Dockerfile  README.md  main.py  orders.db  pyproject.toml
order_service/app/: database.py  dependencies.py  main.py  models.py
order_service/app/routers/: admin_order_routers.py  cart_routers.py  order_routers.py
order_service/app/schema/: cart_schema.py  order_schema.py
user_service/: .gitignore  README.md  pyproject.toml
user_service/app/: auth.py  database.py  dependencies.py  main.py  model.py  schemas.py
user_service/app/routes/: admin_router.py  user_routes.py
user_service/app/tests/: conftest.py  test_admin.py  test_auth.py  test_unit.py  test_user_api.py
(+3 files in other folders)
