[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.3.0",
    "fastapi==0.138.0",
    "pwdlib[argon2]==0.3.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy==2.0.51",
    "uvicorn[standard]==0.49.0",
]
